--- a/src/scss/config/_variable.scss
+++ b/src/scss/config/_variable.scss
@@ -30,7 +30,10 @@ $color-blue-light-1: #b3e0ff;
 $color-blue-dark-1: #004d80;
 $color-blue-dark-2: #0099ff;
 //back-ground color---------------------------------------------
-$back-color: (default: #ffff, backdrow :rgba(38, 38, 38, .7), menu-linkHover: #ffcccc, bshop-icon :#ff6699, btncolor: #d60644, btn-shadow: #95042f);
+$back-color: (
+    default: #ffff, backdrow :rgba(38, 38, 38, .7),
+ linkHover-background: #e71939,  linkHover-color :#ffff,  linkHover-focus: #ffad33
+ , btn-shadow: #95042f);
 //font color========================================
 //media query=======================================
 $breakpoints: (xs: 576px, sm: 768px, md: 992px, lg: 1200px);
