complete sidebare and add taps

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -3,7 +3,11 @@
   flex-direction: column;
   justify-content: space-between;
   z-index: 100;
-  padding: 10px 10px; }
+  background-color: #ff6600;
+  width: 92%;
+  margin: 20px auto;
+  border-radius: 5px;
+  padding: 3px 0; }
   .nav-Items__icon {
     color: #ccc;
     font-size: 12px;
@@ -15,26 +19,23 @@
     justify-content: flex-start;
     text-decoration: none;
     align-items: center;
+    margin: 0;
     padding: 5px;
-    width: 100%;
+    width: inherit;
     color: #ffff; }
     .nav-Items__link:hover {
       background-color: #e71939;
       color: #ffff; }
     .nav-Items__link:focus {
-      color: #ffad33; }
+      color: #ffff; }
 
 .submenu {
-  background-color: #595959;
+  background-color: #333;
   margin: 0;
   padding: 0; }
 
 .nav-item-layer {
-  background-color: #ffb84d;
-  width: 92%;
-  margin: 10px auto;
-  border-radius: 5px;
-  padding: 5px; }
+  background-color: #ffb84d; }
 
 .nav-item-layer a {
   color: black;
@@ -50,3 +51,8 @@
 
 .nav-item-layer li {
   list-style-type: none; }
+
+.ddd {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
