--- a/src/scss/config/_variable.scss
+++ b/src/scss/config/_variable.scss
@@ -32,7 +32,7 @@ $color-blue-dark-2: #0099ff;
 //back-ground color---------------------------------------------
 $back-color: (
     default: #ffff, backdrow :rgba(38, 38, 38, .7),
- linkHover-background: #e71939,  linkHover-color :#ffff,  linkHover-focus: #ffad33
+ linkHover-background: #e71939,  linkHover-color :#ffff,  linkHover-focus: #ffff
  , btn-shadow: #95042f);
 //font color========================================
 //media query=======================================
