--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,1 +1,4 @@
 @import "./../../components/Sidebar/sidebare";
+@import "./../../components/Itview/itview";
+@import "./../../components/Itviewcards/itviewcard";
+@import "./../../views/Dashboard/dashboard";
