--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -2,3 +2,4 @@
 @import "./../../components/Itview/itview";
 @import "./../../components/Itviewcards/itviewcard";
 @import "./../../views/Dashboard/dashboard";
+@import "./../../components/Chartresize/chartresize;
