--- a/src/components/Sidebar/_sidebare.scss
+++ b/src/components/Sidebar/_sidebare.scss
@@ -37,10 +37,12 @@
 }
 
 .submenu{
-    background-color:#333;
+    background-color:#ccc;
     margin: 0;
     padding: 0;
+   
 }
+
 .nav-item-layer{
     background-color: #ffb84d;
 
