--- a/src/components/Sidebar/_sidebare.scss
+++ b/src/components/Sidebar/_sidebare.scss
@@ -37,10 +37,13 @@
 }
 
 .submenu{
-    background-color:#ccc;
+    background-color:#262626;
     margin: 0;
     padding: 0;
-   
+   ul {
+     background-color:#37474f
+
+   }
 }
 
 .nav-item-layer{
