completed menu and tabs

--- a/src/views/Dashboard/_dashboard.scss
+++ b/src/views/Dashboard/_dashboard.scss
@@ -2,6 +2,12 @@
     background-color: #ff9900;
     text-align: center;
     padding:5px;
+    margin: 10px;
     border:1px solid  #b36b00;
 border-radius: 5px;
+}
+
+.chartjs-render-monitor{
+    width: 400px;
+    height: 220px;
 }
