--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -100,8 +100,13 @@
   background-color: #ff9900;
   text-align: center;
   padding: 5px;
+  margin: 10px;
   border: 1px solid  #b36b00;
   border-radius: 5px; }
+
+.chartjs-render-monitor {
+  width: 400px;
+  height: 220px; }
 
 .ddd {
   width: 500px; }
